# ACS

./: README.md
class-wide-projects/project-1/: EXPERIMENTS_README.md  kernels.cpp  kernels_scalar  kernels_simd  project_manager.py  readme.md  report.md  report_SIMD.md
class-wide-projects/project-1/experiments/: alignment_tail.py  baseline_correctness.py  datatype_comparison.py  locality_sweep.py  roofline.py  stride_gather.py
class-wide-projects/project-1/results/: align_tail_20250925_033847_cold.csv  align_tail_20250925_033919_warm.csv  baseline_20250925_003750_cold.csv  baseline_20250925_004010_warm.csv  datatype_20250925_042530_cold.csv  datatype_20250925_042621_warm.csv  locality_20250925_134615_cold.csv  locality_20250925_134929_warm.csv  roofline_20251001_130303_warm.csv  stride_20250925_222600_cold.csv  stride_20250925_223022_warm.csv
class-wide-projects/project-2/: README.md  manager.py  report.md  report_Memory.md  saxpy  saxpy.cpp  saxpy_tlb.cpp
class-wide-projects/project-2/experiments/: VARIED_N_cache_miss_impact.py  cache_miss_impact.py  intensity_sweep.py  pattern_granularity.py  read_write_mix.py  tlb_miss_impact.py  utils.py  working_set_sweep.py  zero_queue_baseline.py
class-wide-projects/project-2/figures/rw_mix_2025-09-27_04-06-30/: latency_table.md  summary_table.md
class-wide-projects/project-2/figures/rw_mix_2025-09-27_04-17-27/: latency_table.md  summary_table.md
class-wide-projects/project-2/figures/zero_queue_baseline_2025-09-27_00-28-12/: summary_table.md
class-wide-projects/project-2/figures/zero_queue_baseline_2025-09-27_00-30-26/: summary_table.md
class-wide-projects/project-2/figures/zero_queue_baseline_2025-09-27_16-25-38/: summary_table.md
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_18-43-20/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_18-45-49/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_18-57-27/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_18-58-30/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_19-01-44/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_19-07-28/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_19-14-31/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-27_19-20-06/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/cache_miss_impact_2025-09-28_03-06-05/: raw_data.csv  summary.csv
class-wide-projects/project-2/results/rw_mix_2025-09-27_04-06-30/: raw_data.csv  (+2 more)
class-wide-projects/project-3/: project_manager.py  readme.md  report_SSD.md
class-wide-projects/project-3/experiments/: block_size_sweep.py  queue_depth_sweep.py  readwrite_mix.py  tail_latency.py  utils.py  zeroqueue.py
track-A/A3/: CMakeLists.txt  project_manager.py  readme.md  report_Filters.md
track-A/A3/benchmark/: bench.cpp  test_filters.cpp
track-A/A3/experiments/: experiment_manager.py  plot_manager.py
track-A/A3/filters/: bloom.cpp  bloom.h  cuckoo.cpp  cuckoo.h  hash_utils.h  quotient.cpp  quotient.h  xor.cpp  xor.h
track-A/A3/results/insert_delete/2025-10-24_22-11-46/: results.csv  summary.csv
track-A/A3/results/lookup_latency/2025-10-24_22-09-42/: results.csv  summary.csv
track-A/A3/results/space_vs_accuracy/2025-10-24_14-49-21/: results.csv  summary.csv
track-A/A3/results/thread_scaling/2025-10-24_22-22-44/: results.csv  summary.csv
(+129 files in other folders)
